tests/paczka1/fuzzy1/75269807.err
Error in line 4: XptdjZkEBL7 S458 91,4
Error in line 14: XptdjZkEBL7 S234 16,5
Error in line 21: XptdjZkEBL7 A521 98,4
Error in line 19: htXYZ97mJ S458 70,0
Error in line 32: 0P7npav A521 15,4
Error in line 36: rdIIowc S433 -3,25
